prevent overflow

--- a/viewer/src/views/file_explorer.scss
+++ b/viewer/src/views/file_explorer.scss
@@ -24,5 +24,7 @@
     @include mh-0;
 
     @include scrollable;
+
+    overflow-wrap: anywhere;
   }
 }
